# pybastion

./: .gitignore  README.md  pyproject.toml
docs/assistant/: AI_CONTEXT.md  AI_STATE.md
docs/common/: pybastion-cli.md
docs/integration/: integration-analysis-pipeline.md  project-analysis-markers.md
docs/unit/: branch_ids.md  unit-analysis-pipeline.md  unit-testing-agent-contract.md  unit-testing-contract.md
pybastion-common/: pyproject.toml
pybastion-common/pybastion_common/: common_config.py  models.py  pybastion_config.toml  smt_path_checker.py
pybastion-integration/: README.md  pyproject.toml
pybastion-integration/docs/: operation-metadata-spec.md  project-analysis-decorators.md  project-analysis-markers.md
pybastion-integration/pybastion_integration/: cli.py  config.py  integration_config.toml  integration_flow_pipeline.py  run_integration_analysis.py
pybastion-integration/pybastion_integration/shared/: data_structures.py  ledger_reader.py  models.py  smt_path_checker.py
pybastion-integration/pybastion_integration/stages/: build_full_call_graph.py  build_full_call_graph_from_inventory.py  build_full_call_graph_prev.py  run_integration_analysis.py  stage1_build_call_graph.py  stage1_collect_integration_points.py  stage2_categorize_paths.py  stage2_collect_integration_points.py  stage2_generate_test_specs.py  stage2_trace_feature_flows.py  stage3_categorize_paths.py  stage3_generate_test_specs.py  stage3_split_specs.py  stage4_feature_tracing.py  stage4_generate_test_specs.py  stage4_split_specs.py  stage4_trace_feature_flows.py  test_fixture_mapping.py
pybastion-integration/pybastion_integration/stages_old/: stage3_build_integration_graph.py
pybastion-integration/pybastion_integration/utils/: check_cycles.py  check_ei_successors.py  check_entry_eis.py  check_graph_eis.py  check_inventory_graph.py  check_stuff.py  feature_tracing.py  graph_checker_config.json  graph_loader.py  inventory_index.py  trace_feature_flows.py
pybastion-unit/: README.md  pyproject.toml
pybastion-unit/docs/: quality_analysis.md
pybastion-unit/pybastion_unit/: cli.py  config.py  constraint_metadata_helper.py  enumerate_callables.py  enumerate_exec_items.py  find_unannotated_loop_vars.py  inspect_units.py  inventory_to_ledger.py  models.py  quality_config.toml  run_project_analysis.py  run_unit_analysis.py  smt_path_checker.py  statement_decomposition.py  unit_config.toml
pybastion-unit/pybastion_unit/helpers/: analyze_readiness.py  callable_id_generation.py  chain_resolution.py  constraint_metadata_helper.py  debug_tracing.py  decorator_processing.py  integration_analysis.py  smt_path_checker.py  statement_decomposition.py  type_indexing.py  type_inference.py
pybastion-unit/pybastion_unit/semantic_decomposition/: __init__.py  base.py  common.py  control.py  decomp_models.py  decomp_types.py  expressions.py  simple.py
pybastion-unit/pybastion_unit/shared/: callable_id_generation.py  knowledge_base.py  models.py
pybastion-unit/pybastion_unit/stages/: stage1_inspect_units.py  stage2_enumerate_exec_items.py  stage3_enumerate_callables.py  stage5_inventory_to_ledger.py
pybastion-unit/pybastion_unit/stages/legacy/: stage2_enumerate_exec_items.py  stage3_enumerate_callables.py  stage4_analyze_code_quality.py  stage5_inventory_to_ledger.py  statement_decomposition.py
src/pybastion/: cli.py  config_init.py
tests/fixtures/feature-flow-fixture/src/feature_flow_fixture/: synthetic_feature_dependency.py  synthetic_feature_flows.py
tests/integration/: test_run_integration_analysis_stage_commands.py  test_stage1_build_call_graph_control_authority.py
tests/unit/: test_feature_flow_control_flow.py
