[project]
name = "pybastion"
version = "0.1.0"
description = "Comprehensive unit and integration testing through AST-based ledger generation"
authors = [
    { name = "Steve Storck", email = "steve973@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<4.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pybastion-common==0.1.0",
    "pybastion-unit==0.1.0",
    "pybastion-integration==0.1.0",
    "networkx==3.4.2",
    "pyyaml>=6.0.3,<7.0",
    "radon>=6.0.1",
    "vulture>=2.14",
    "z3-solver>=4.15.8.0",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "mypy>=1.19.1",
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
pybastion = "pybastion.cli:main"
pybastion-unit = "pybastion_unit.cli:main"
pybastion-integration = "pybastion_integration.cli:main"

[tool.uv]
build-constraint-dependencies = [
    "uv_build>=0.11.20,<0.12",
]

[tool.uv.sources]
pybastion-common = { workspace = true }
pybastion-unit = { workspace = true }
pybastion-integration = { workspace = true }

[tool.uv.workspace]
members = [
    "pybastion-common",
    "pybastion-unit",
    "pybastion-integration",
]

[build-system]
requires = ["uv_build>=0.11.20,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = [
    "tests/unit",
    "tests/integration",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_functions = [
    "test_*",
]
markers = [
    "unit: isolated tests for individual functions/classes",
    "integration: tests that run the analysis pipeline or touch filesystem/process boundaries",
]
