[project]
name = "pybastion-common"
version = "0.1.0"
description = "Common/shared code for pybastion"
authors = [
    { name = "Steve Storck", email = "steve973@gmail.com" }
]
readme = { text = "# pybastion-common\n\nCommon/shared code for pybastion.\n", content-type = "text/markdown" }
license = "MIT"
requires-python = ">=3.11,<4.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "z3-solver",
]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.20,<0.12"]
build-backend = "uv_build"
