[project]
name = "pybastion-integration"
version = "0.1.0"
description = "Integration flow analysis and comprehensive integration testing"
authors = [
    { name = "Steve Storck", email = "steve973@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<4.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "pybastion-common",
    "networkx",
    "pyyaml",
    "z3-solver",
]

[project.scripts]
pybastion-integration = "pybastion_integration.cli:main"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
