[project]
name = "pybastion-unit"
version = "0.1.0"
description = "Unit test ledger generation and comprehensive unit testing"
authors = [
    { name = "Steve Storck", email = "steve973@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<4.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance"
]

[tool.poetry]
packages = [
    { include = "pybastion_unit" }
]

[tool.poetry.dependencies]
python = "^3.10"
mypy = ">=1.19.1"
pyyaml = ">=6.0.3"
radon = ">=6.0.1"
vulture = ">=2.14"

[tool.poetry-monoranger-plugin]
enabled = true

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"

[tool.poetry.scripts]
pybastion-unit = "pybastion_unit.cli:main"

[build-system]
requires = ["poetry-core>=2.2.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"