[project]
name = "pybastion-unit"
version = "0.1.0"
description = "Unit test ledger generation and comprehensive unit testing"
authors = [
    { name = "Steve Storck", email = "steve973@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<4.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "pybastion-common",
    "pyyaml",
    "radon",
    "vulture",
    "z3-solver",
]

[dependency-groups]
dev = [
    "mypy",
]

[project.scripts]
pybastion-unit = "pybastion_unit.cli:main"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
