[project]
name = "pybastion-unit"
version = "0.1.0"
description = "Unit test ledger generation and comprehensive unit testing"
authors = [
    { name = "Steve Storck", email = "steve973@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<4.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "pybastion-common",
    "pyyaml>=6.0.3,<7.0",
    "z3-solver>=4.16.0.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]

[project.scripts]
pybastion-unit = "pybastion_unit.cli:main"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.20,<0.12"]
build-backend = "uv_build"
